objects/AccountSpecializationRequirement__c.object
<CustomObject>
    <fields>
        <fullName>AccountSpecialization__c</fullName>
        <label>Account Specialization</label>
        <referenceTo>AccountSpecialization__c</referenceTo>
        <relationshipLabel>Account Specialization Requirements</relationshipLabel>
        <relationshipName>Account_Specialization_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequirementDescription__c</fullName>
        <formula>SpecializationRequirement__r.Description__c</formula>
        <label>Requirement Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <formula>SpecializationRequirement__r.RequirementCatalog__r.Name</formula>
        <label>Requirement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecializationRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialization Requirement</label>
        <referenceTo>SpecializationRequirement__c</referenceTo>
        <relationshipLabel>Account Specialization Requirements</relationshipLabel>
        <relationshipName>Account_Specialization_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <formula>SpecializationRequirement__r.Specialization__r.Name</formula>
        <label>Specialization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Waved</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetGuidelines__c</fullName>
        <formula>SpecializationRequirement__r.TargetGuidelines__c</formula>
        <label>Target Guidelines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <formula>0</formula>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Specialization Requirement</label>
    <nameField>
        <displayFormat>ASR-{000000}</displayFormat>
        <label>Account Specialization Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Specialization Requirements</pluralLabel>
    <recordTypes>
        <fullName>ActivityRequirement</fullName>
        <active>true</active>
        <description>Requirements tied to Activity Requirements</description>
        <label>Activity Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>CertificationRequirement</fullName>
        <active>true</active>
        <description>Requirements tied to Certification Requirements</description>
        <label>Certification Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>TargetRequirement</fullName>
        <active>true</active>
        <description>Requirements tied to Target Requirements</description>
        <label>Target Requirement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>